CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

PROJECT(UMake)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

ADD_SUBDIRECTORY(boost)

INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})

ADD_EXECUTABLE(UMake src/*.cpp)

TARGET_COMPILE_OPTIONS(UMake PUBLIC /MT$<$<CONFIG:debug>:d> /DBOOST_ALL_NO_LIB)

TARGET_LINK_LIBRARIES(UMake boost_system boost_program_options boost_filesystem)